docs: add update opening documentation
